# stepdocs

./: Cargo.toml  readme.md
src/: main.rs
src/generator/: markdown_builder.rs  mod.rs
src/git/: diff.rs  log_parser.rs  mod.rs  repo.rs
src/util/: iter.rs  macros.rs  mod.rs  peekable_reader.rs  proc.rs  string.rs
