[package]
name = "stepdocs"
description = "Generate step by step docs from git repository"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/step-docs/stepdocs.git"
authors = ["Wireless4024"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bstr = { version = "1", features = ["alloc"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
test_data = []